<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/layout_background">
    <!--Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BMI"
        android:gravity="center"
        android:textSize="@dimen/title_size"
        android:textColor="@color/text"/>
    <!-- Weight Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_Title"
                android:textSize="@dimen/title_size"
                android:textColor="@color/text"
                />
            <!-- Unit Of Measure -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/weight_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textSize="@dimen/unitOfMeasure_size"
                    android:textColor="@color/text_hint"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/uom_weight"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/unitOfMeasure_size"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Height Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="8dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="15dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height_Title"
                android:textSize="@dimen/title_size"
                android:textColor="@color/text"
                />
            <!-- Unit Of Measure -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/height_value"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textSize="@dimen/unitOfMeasure_size"
                    android:textColor="@color/text_hint"
                    />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/uom_Height"
                    android:gravity="center"
                    android:textColor="@color/text"
                    android:textSize="@dimen/unitOfMeasure_size"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <!-- Calculate Button -->
    <Button
        android:id="@+id/action_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CALCULATE"
        android:textColor="@color/text"
        android:textSize="@dimen/unitOfMeasure_size"
        android:backgroundTint="@color/btn_background" />
    <!-- Result Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="15dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/result_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                tools:text="21.78"
                android:gravity="center"
                android:textSize="@dimen/result_size"
                android:textColor="@color/text"/>
            <TextView
                android:id="@+id/status_txt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:text="Healthy"
                android:gravity="center"
                tools:textColor="@color/normal_weight"
                android:textSize="@dimen/unitOfMeasure_size"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/status_description"
                android:gravity="center"
                android:textColor="@color/text_hint"/>



        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>